[gd_scene load_steps=4 format=3 uid="uid://d2bb8tpx5ikj2"]

[ext_resource type="Script" uid="uid://bsukxywf6sn30" path="res://scenes/main/main.gd" id="1_hyk8p"]

[sub_resource type="SystemFont" id="SystemFont_wyggb"]
font_names = PackedStringArray("monospace")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_gq24m"]
font = SubResource("SystemFont_wyggb")
font_size = 40
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="Main" type="Node"]
script = ExtResource("1_hyk8p")
metadata/_custom_type_script = "uid://bsukxywf6sn30"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="UI" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="CanvasLayer/UI/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "10.00"
label_settings = SubResource("LabelSettings_gq24m")

[node name="ScoreLabel" type="Label" parent="CanvasLayer/UI/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = SubResource("LabelSettings_gq24m")
horizontal_alignment = 2

[node name="Space" type="Control" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PowerUpLabel" type="Label" parent="CanvasLayer/UI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Power Up: None"
label_settings = SubResource("LabelSettings_gq24m")
horizontal_alignment = 1
